# opswat-account-map-tool

./: .env.example  .gitignore  Makefile  README.md  api.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  observability.py
app/api/: __init__.py  v2.py
app/models/: __init__.py  account_map.py  legacy.py
app/services/: __init__.py  capability_map.py  grounding.py  pdf_export.py  prompts.py  providers.py  retrieval.py
app/services/pipeline/: __init__.py  orchestrator.py  schemas.py
app/services/pipeline/prompts/: stage_assemble.md  stage_narrative.md  stage_repair_narrative.md  stage_research.md  stage_select.md  stage_signals.md  system_base.md
cli/: __init__.py  account_map.py  import_v1.py  provider_smoke.py
data/: capability_map.json
scripts/: account_map.py  build_capability_map.py  chunk_customer_stories.py  diagram_generator.py  export_deck.mjs  index_customer_story_chunks.py  ingest_customer_stories.py  ingest_local_customer_stories.py  retrieve_customer_stories.py
tests/: test_v2_api.py  test_v2_foundation.py  test_v2_grounding.py  test_v2_legacy_import.py  test_v2_pdf_export.py  test_v2_pipeline.py  test_v2_retrieval.py
ui/: app.js  index.html  styles.css
