[project]
name = "opswat-account-map-tool"
version = "0.2.0"
description = "Internal OPSWAT account mapping workbench."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.52.0",
  "fastapi>=0.115.0",
  "openai>=2.0.0",
  "pinecone>=5.0.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "reportlab>=4.2.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]
